Fixed uneven nodes

--- a/css/treeNodes.css
+++ b/css/treeNodes.css
@@ -25,6 +25,7 @@
 }
 
 .node-header {
+    box-sizing: border-box;
     font-size: 1rem;
     border: 1px solid;
     width: 100%;
@@ -36,8 +37,10 @@
 }
 
 .node-body {
+    box-sizing: border-box;
     font-size: 0.9rem;
     padding: 0.5rem;
+    width: 100%;
     display: flex;
     border: 1px solid;
     flex-direction: row;
